--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               >
             </li>
           </ul>
+            <h2>Form Starts</h2>
           <form class="form-inline my-2 my-lg-0">
             <input
               class="form-control mr-sm-2"
